[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-youtube-uploader"
version = "1.0.0"
description = "Upload videos directly to YouTube from ComfyUI workflows"
authors = [{name = "ComfyUI YouTube Extension"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["comfyui", "youtube", "video", "upload", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.5.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
    "opencv-python>=4.8.0",
    "scipy>=1.10.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
video = ["ffmpeg-python>=0.2.0"]
audio = ["librosa>=0.10.0", "soundfile>=0.12.0"]
all = ["ffmpeg-python>=0.2.0", "librosa>=0.10.0", "soundfile>=0.12.0"]

[project.urls]
Homepage = "https://github.com/flamacore/ComfyUI-YouTubeUploader"
Repository = "https://github.com/flamacore/ComfyUI-YouTubeUploader"
Issues = "https://github.com/flamacore/ComfyUI-YouTubeUploader/issues"
